[gd_scene load_steps=13 format=3 uid="uid://dlsxkapbmu8a5"]

[ext_resource type="Script" path="res://Main Menu/MainMenu.gd" id="1_geu8k"]
[ext_resource type="Texture2D" uid="uid://dv0lei01qofet" path="res://HUD/Art/HealthbarEmpty.png" id="2_6as2u"]
[ext_resource type="Texture2D" uid="uid://dvytqvkcigcqi" path="res://Player/Characters/Art/CookieWalk-1.png" id="3_dksqh"]
[ext_resource type="Texture2D" uid="uid://col2ljvlcd2qm" path="res://Player/Art/Faces/DefaultFace.png" id="4_5lfsp"]
[ext_resource type="Texture2D" uid="uid://bt10bgswjsytr" path="res://Player/Characters/Art/CookieWalk-0.png" id="4_8g5ns"]
[ext_resource type="LabelSettings" uid="uid://b02ry3r2kq5vl" path="res://HUD/Name.tres" id="5_wyfeg"]
[ext_resource type="Texture2D" uid="uid://by5xjmtqfs0bw" path="res://Player/Art/Faces/ScaredFace.png" id="6_u6a4v"]
[ext_resource type="PackedScene" uid="uid://cjh381wkxqgma" path="res://Main Menu/Achievements/AchievementDisplay.tscn" id="8_uwlwx"]

[sub_resource type="LabelSettings" id="LabelSettings_7v2bj"]
font_size = 64

[sub_resource type="SpriteFrames" id="SpriteFrames_rcntu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dksqh")
}, {
"duration": 1.0,
"texture": ExtResource("4_8g5ns")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_0d6vo"]
offsets = PackedFloat32Array(0.55, 0.73)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gud3p"]
gradient = SubResource("Gradient_0d6vo")
width = 36
height = 18
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_geu8k")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.5
offset_right = 202.5
offset_bottom = 96.0
grow_horizontal = 2
text = "TastyTerm"
label_settings = SubResource("LabelSettings_7v2bj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -256.0
offset_right = 128.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CharacterSelect" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 80)
layout_mode = 2

[node name="TempRightCharacter" type="Button" parent="VBoxContainer/CharacterSelect"]
layout_mode = 0
offset_left = 201.5
offset_top = 12.0
offset_right = 244.5
offset_bottom = 43.0
text = ">"

[node name="TempLeftCharacter" type="Button" parent="VBoxContainer/CharacterSelect"]
layout_mode = 0
offset_left = 20.5
offset_top = 6.0
offset_right = 63.5
offset_bottom = 37.0
text = "<"

[node name="Display" type="AnimatedSprite2D" parent="VBoxContainer/CharacterSelect"]
texture_filter = 1
position = Vector2(124.5, 20)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_rcntu")
frame_progress = 0.366121

[node name="Shadow" type="Sprite2D" parent="VBoxContainer/CharacterSelect/Display"]
modulate = Color(1, 1, 1, 0.607843)
z_index = -1
position = Vector2(0, 14)
texture = SubResource("GradientTexture2D_gud3p")

[node name="Name" type="Label" parent="VBoxContainer/CharacterSelect/Display"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -4.0
offset_right = 10.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Cookie"
label_settings = ExtResource("5_wyfeg")
horizontal_alignment = 1

[node name="Face" type="TextureButton" parent="VBoxContainer/CharacterSelect/Display"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
grow_horizontal = 2
grow_vertical = 2
toggle_mode = true
texture_normal = ExtResource("4_5lfsp")
texture_pressed = ExtResource("6_u6a4v")

[node name="CharacterDescription" type="NinePatchRect" parent="VBoxContainer"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
texture = ExtResource("2_6as2u")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="VBoxContainer/CharacterDescription"]
layout_mode = 0
offset_left = 3.0
offset_right = 253.0
offset_bottom = 64.0
text = "The original tasty terminator, fires chocolate chips. gains health and speed every level."
autowrap_mode = 3

[node name="LevelSelect" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="Description" type="NinePatchRect" parent="VBoxContainer/LevelSelect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 242.5
offset_top = 2.0
offset_right = 248.5
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_6as2u")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="Label" type="Label" parent="VBoxContainer/LevelSelect/Description"]
layout_mode = 0
offset_left = 182.5
offset_top = 32.0
offset_right = 222.5
offset_bottom = 55.0

[node name="TempStart" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
text = "Start
"

[node name="TempAchievments" type="Button" parent="."]
layout_mode = 0
offset_left = 290.0
offset_top = 683.0
offset_right = 398.0
offset_bottom = 714.0
text = "Achievments"

[node name="TempSettings" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 682.0
offset_right = 80.0
offset_bottom = 713.0
text = "Settings"

[node name="AchievmentDisplay" parent="." instance=ExtResource("8_uwlwx")]
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/CharacterSelect/TempRightCharacter" to="." method="_on_temp_right_character_pressed"]
[connection signal="pressed" from="VBoxContainer/CharacterSelect/TempLeftCharacter" to="." method="_on_temp_left_character_pressed"]
[connection signal="toggled" from="VBoxContainer/CharacterSelect/Display/Face" to="." method="_on_face_toggled"]
[connection signal="pressed" from="VBoxContainer/TempStart" to="." method="_on_temp_start_pressed"]
[connection signal="pressed" from="TempAchievments" to="." method="_on_temp_achievments_pressed"]
